--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -1,6 +1,6 @@
 <%- include('./particals/header.ejs') %>
 
-            <form class="form" method="post">
+            <form class="form" method="post" action="<%= process.env.BASE_URL_API%>/auth/login">
                 <h1>Login</h1>
                 <input type="email" class="input" placeholder="Your Login Email">
                 <input type="password" class="input" placeholder="•••••••••" >
