--- a/views/registerPage.ejs
+++ b/views/registerPage.ejs
@@ -1,6 +1,6 @@
 <%- include('./particals/header.ejs') %>
 
-            <form class="form" method="post" action="/api/v1/auth/register">
+            <form class="form" method="post" action="<%= process.env.BASE_URL_API %>/auth/register">
                 <h1>Register</h1>
                 <input type="text" class="input" placeholder="Your Name" name="userName">
                 <input type="email" class="input" placeholder="Your Email" name="email">
