--- a/views/particals/header.ejs
+++ b/views/particals/header.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Short Url Generate</title>
+    <link rel="stylesheet" href="/css/all.min.css">
     <link rel="stylesheet" href="/css/shortUrl.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
