--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -2,9 +2,9 @@
 
             <form class="form" method="post" action="<%= process.env.BASE_URL_API%>/auth/login">
                 <h1>Login</h1>
-                <input type="email" class="input" placeholder="Your Login Email" name="email">
+                <input type="email" class="input" placeholder="Your Login Email" name="email" value="<%= locals.email %>">
                 <div style="position: relative;">
-                    <input type="password" class="input passInput" placeholder="•••••••••" name="pass">
+                    <input type="password" class="input passInput" placeholder="•••••••••" name="pass" value="<%= locals.pass %>">
                     <div class="passButtons" style="position: absolute; top: 10px; right: 10px;">
                         <button type="button" class="showBtn" style="background-color: transparent; border: none; box-shadow: none; font-size: 20px; cursor: pointer;">
                             <i class="fa-regular fa-eye"></i>
