Changes to be committed: 	modified:   public/js/script.js 	modified:   views/loginPage.ejs 	modified:   views/registerPage.ejs

--- a/views/registerPage.ejs
+++ b/views/registerPage.ejs
@@ -24,11 +24,11 @@
 
             <!-- pass show not show part -->
             <div class="passButtons" style="position: absolute; top: 10px; right: 10px;">
-                <button type="button" class="showBtn"
+                <button onclick="showBtn()" type="button" class="showBtn"
                     style="background-color: transparent; border: none; box-shadow: none; font-size: 20px; cursor: pointer;">
                     <i class="fa-regular fa-eye"></i>
                 </button>
-                <button type="button" class="notShowBtn" style="display: none;">
+                <button onclick="notShowBtn()" type="button" class="notShowBtn" style="display: none;">
                     <i class="fa-regular fa-eye-slash"></i>
                 </button>
             </div>
