Changes to be committed: 	modified:   controllers/auth/login.js 	modified:   controllers/shortUrl/makeUrl.js 	modified:   controllers/shortUrl/renderUrl.js 	modified:   modal/shortUrlSchema.js 	modified:   route/index.js 	modified:   route/staticSites/index.js 	modified:   views/particals/header.ejs

--- a/views/particals/header.ejs
+++ b/views/particals/header.ejs
@@ -14,10 +14,29 @@
 
     <nav>
         <ul>
-            <a href="/login">Login</a>
-            <a href="/register">Register</a>
+            <% if (locals.loggedUser) { %>
+                <button class="asdasd">Logout</button>
+                <a href="/dashboard">Dashboard</a>
+                <% }else{ %>
+                    <a href="/login">Login</a>
+                    <a href="/register">Register</a>
+                    <% } %>
         </ul>
     </nav>
+
+    <script>
+        const btn = document.querySelector(".asdasd")
+        btn.addEventListener("click", () => {
+            fetch('http://localhost:8000/logout', { method: "POST" })
+                .then(response => {
+
+                    if (response.redirected) {
+                        window.location.href = response.url;
+                        return;
+                    }
+                })
+        })
+    </script>
 
     <section class="banner">
 
