modified:   route/index.js 	modified:   views/dashboard.ejs

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -17,6 +17,9 @@
         </ul>
     </nav>
 
+    <section class="banner">
+<%= locals.loggedUserInfo.userName  %>
+    </section>
 </body>
 
 </html>
