--- a/public/css/shortUrl.css
+++ b/public/css/shortUrl.css
@@ -205,3 +205,33 @@ h1{
   cursor: pointer;
   filter: drop-shadow(2px 3px 2px #000);
 }
+
+/* ======= dashboard ======= */
+.dashboardRow{
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  gap: 20px;
+}
+
+.profileInfo{
+  width: 400px;
+  font-size: 20px;
+  color: #fff;
+  padding: 60px 40px;
+  border-radius: 10px;
+  backdrop-filter: blur(10px);
+  border: 1px solid #ffffff66;
+  box-shadow: inset 0px 0px 25px rgb(255, 255, 255, 0.3);
+}
+
+.historyInfo{
+  width: 800px;
+  font-size: 20px;
+  color: #fff;
+  padding: 60px 40px;
+  border-radius: 10px;
+  backdrop-filter: blur(5px);
+  border: 1px solid #ffffff66;
+  box-shadow: inset 0px 0px 25px rgb(255, 255, 255, 0.1);
+}
