--- a/public/css/shortUrl.css
+++ b/public/css/shortUrl.css
@@ -18,6 +18,14 @@ body {
   background-color: #f3f4f6;
 }
 
+h2{
+  font-size: 30px;
+  font-family: "future";  
+  color: #fff;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
 nav{
   position: absolute;
   width: 100%;
@@ -225,7 +233,16 @@ h1{
   box-shadow: inset 0px 0px 25px rgb(255, 255, 255, 0.3);
 }
 
-.historyInfo{
+.historyInfo h2{
+  width: 100%;
+  padding: 30px 0px;
+  border-radius: 10px;
+  backdrop-filter: blur(10px);
+  border: 1px solid #ffffff66;
+  box-shadow: inset 0px 0px 25px rgb(255, 255, 255, 0.3);
+}
+
+.historyInfo table{
   width: 800px;
   font-size: 20px;
   color: #fff;
@@ -233,5 +250,14 @@ h1{
   border-radius: 10px;
   backdrop-filter: blur(5px);
   border: 1px solid #ffffff66;
-  box-shadow: inset 0px 0px 25px rgb(255, 255, 255, 0.1);
+  box-shadow: inset 0px 0px 25px rgb(255, 255, 255, 0.3);
+}
+
+table tr th{
+  width: 120px;
+  text-align: start;
+}
+
+table tr{
+  margin-top: 10px !important;
 }
