--- a/public/css/shortUrl.css
+++ b/public/css/shortUrl.css
@@ -1,4 +1,4 @@
-*{
+* {
   margin: 0;
   padding: 0;
   outline: none;
@@ -10,7 +10,7 @@
   src: url('../font/Reospec.otf');
 }
 
-a{
+a {
   text-decoration: none;
 }
 
@@ -18,15 +18,15 @@ body {
   background-color: #f3f4f6;
 }
 
-h2{
+h2 {
   font-size: 30px;
-  font-family: "future";  
+  font-family: "future";
   color: #fff;
   text-align: center;
   margin-bottom: 20px;
 }
 
-nav{
+nav {
   position: absolute;
   width: 100%;
   padding: 30px 0px 30px;
@@ -37,13 +37,14 @@ nav{
   border-bottom-right-radius: 10px;
 }
 
-nav ul{
-  display: flex; 
+nav ul {
+  display: flex;
   justify-content: center;
   gap: 50px;
 }
 
-nav ul a{
+nav ul a,
+nav ul button {
   font-family: "future";
   font-weight: 400;
   text-decoration: none;
@@ -51,12 +52,14 @@ nav ul a{
   color: white;
   font-size: 30px;
   transition: all linear 0.1s;
-}
+  background-color: transparent;
+  border: none;
 
-nav ul a:hover{
-  color: #ffd753;
-  cursor: pointer;
-  filter: drop-shadow(2px 2px 2px #89e4ff);
+  &:hover {
+    color: #ffd753;
+    cursor: pointer;
+    filter: drop-shadow(2px 2px 2px #89e4ff);
+  }
 }
 
 .generateUrlForm {
@@ -65,7 +68,7 @@ nav ul a:hover{
   align-items: center;
 }
 
-h1{
+h1 {
   font-family: "future";
   font-size: 35px;
   margin-bottom: 20px;
@@ -73,7 +76,7 @@ h1{
   color: #fff;
 }
 
-.banner{
+.banner {
   background-image: url('/img/banner2.jpg');
   background-position: center;
   background-size: cover;
@@ -83,7 +86,7 @@ h1{
 }
 
 .card {
-  margin: 0 auto ;
+  margin: 0 auto;
   width: 600px;
   padding: 60px 40px;
   border-radius: 10px;
@@ -146,7 +149,7 @@ h1{
   align-items: center;
 }
 
-.shortUrlContainer p{
+.shortUrlContainer p {
   font-family: "future";
   font-size: 20px;
   color: #fff;
@@ -164,7 +167,7 @@ h1{
   transition: all linear 0.2s;
 }
 
-.inputShortUrl:hover{
+.inputShortUrl:hover {
   color: #3b82f6;
 }
 
@@ -175,14 +178,14 @@ h1{
 
 /* ============ for login register form ============ */
 
-.form{
+.form {
   display: flex;
   flex-direction: column;
   gap: 20px;
   margin: 0 50px;
 }
 
-.errorMsg{
+.errorMsg {
   font-size: 16px;
   color: #fff;
   position: absolute;
@@ -192,15 +195,16 @@ h1{
 }
 
 @keyframes focus {
-  0%{
+  0% {
     opacity: 0;
   }
-  100%{
+
+  100% {
     opacity: 100;
   }
 }
 
-.card .goBackHome{
+.card .goBackHome {
   font-family: "future";
   font-weight: 400;
   font-size: 20px;
@@ -208,21 +212,21 @@ h1{
   margin-top: 10px;
 }
 
-.card .goBackHome:hover{
+.card .goBackHome:hover {
   color: #ffd753;
   cursor: pointer;
   filter: drop-shadow(2px 3px 2px #000);
 }
 
 /* ======= dashboard ======= */
-.dashboardRow{
+.dashboardRow {
   display: flex;
   justify-content: center;
   align-items: start;
   gap: 20px;
 }
 
-.profileInfo{
+.profileInfo {
   width: 400px;
   font-size: 20px;
   color: #fff;
@@ -233,7 +237,7 @@ h1{
   box-shadow: inset 0px 0px 25px rgb(255, 255, 255, 0.3);
 }
 
-.historyInfo h2{
+.historyInfo h2 {
   width: 100%;
   padding: 30px 0px;
   border-radius: 10px;
@@ -242,7 +246,7 @@ h1{
   box-shadow: inset 0px 0px 25px rgb(255, 255, 255, 0.3);
 }
 
-.historyInfo table{
+.historyInfo table {
   width: 800px;
   font-size: 20px;
   color: #fff;
@@ -253,12 +257,12 @@ h1{
   box-shadow: inset 0px 0px 25px rgb(255, 255, 255, 0.3);
 }
 
-table tr th{
+table tr th {
   width: 120px;
   text-align: start;
   vertical-align: top;
 }
 
-table tr{
+table tr {
   margin-top: 10px !important;
 }
