--- a/public/css/shortUrl.css
+++ b/public/css/shortUrl.css
@@ -238,7 +238,7 @@ h1 {
 }
 
 .historyInfo h2 {
-  width: 100%;
+  width: 800px;
   padding: 30px 0px;
   border-radius: 10px;
   backdrop-filter: blur(10px);
