Changes to be committed: 	modified:   views/particals/header.ejs

--- a/views/particals/header.ejs
+++ b/views/particals/header.ejs
@@ -27,7 +27,7 @@
     <script>
         const btn = document.querySelector(".asdasd")
         btn.addEventListener("click", () => {
-            fetch('http://localhost:8000/logout', { method: "POST" })
+            fetch("<%= process.env.BASE_URL %>/logout", { method: "POST" })
                 .then(response => {
 
                     if (response.redirected) {
