--- a/public/css/shortUrl.css
+++ b/public/css/shortUrl.css
@@ -81,7 +81,7 @@ h1 {
   background-position: center;
   background-size: cover;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   padding-top: 200px;
 }
 
