--- a/views/noPage.ejs
+++ b/views/noPage.ejs
@@ -11,8 +11,8 @@
 <body>
     <section class="banner">
         <h1 style="text-align: center; font-size: 100px; margin-top: 120px;">
-            <% if (locals.serverErrorMsg) { %>
-                <%= locals.serverErrorMsg %>
+            <% if (locals.servErrMsg) { %>
+                <%= locals.servErrMsg %>
                     <% }else{ %>
                         No Page Found
                         <% } %>
