Changes to be committed: 	modified:   views/dashboard.ejs

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -22,6 +22,8 @@
     <!-- =================== Banner =================== -->
     <section class="banner">
         <div class="dashboardRow">
+
+            <!-- User Infos -->
             <div class="profileInfo">
                 <h2>User</h2>
                 <table>
