Changes to be committed: 	modified:   helpers/passwordValidator.js 	modified:   views/particals/header.ejs

--- a/views/particals/header.ejs
+++ b/views/particals/header.ejs
@@ -12,6 +12,7 @@
 
 <body>
 
+    <!-- =================== Nav Bar =================== -->
     <nav>
         <ul>
             <% if (locals.loggedUser) { %>
