--- a/views/particals/header.ejs
+++ b/views/particals/header.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/all.min.css">
     <link rel="stylesheet" href="/css/shortUrl.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <link rel="icon" href="http://localhost:8000/img/shortUrl_icon.png">
+    <link rel="icon" href="https://mbn-surl.onrender.com/img/shortUrl_icon.png">
 </head>
 
 <body>
