Changes to be committed: 	modified:   views/dashboard.ejs

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -7,6 +7,7 @@
     <title>Dash Board</title>
     <link rel="stylesheet" href="/css/all.min.css">
     <link rel="stylesheet" href="/css/shortUrl.css">
+    <link rel="icon" href="https://mbn-surl.onrender.com/img/shortUrl_icon.png">
 </head>
 
 <body>
