--- a/views/particals/header.ejs
+++ b/views/particals/header.ejs
@@ -18,7 +18,7 @@
         <ul>
             <% if (locals.loggedUser) { %>
                 <a href="/dashboard">Dashboard</a>
-                <button onclick="logoutBtn()">Logout</button>
+                <button>Logout</button>
                 <% }else{ %>
                     <a href="/login">Login</a>
                     <a href="/register">Register</a>
